--- a/src/tools/qt-gui/resources.qrc
+++ b/src/tools/qt-gui/resources.qrc
@@ -36,7 +36,7 @@
         <file>qml/icons/edit-paste.png</file>
         <file>qml/icons/edit-rename.png</file>
         <file>qml/icons/new-array.png</file>
-        <file>qml/icons/elektra-logo.png</file>
+        <file>qml/icons/elektra.png</file>
         <file>qml/Page1.qml</file>
         <file>qml/Page2.qml</file>
         <file>qml/Page3.qml</file>
@@ -66,7 +66,7 @@
         <file>qml/PluginInfo.qml</file>
         <file>qml/icons/edit-delete.png</file>
         <file>qml/Indicator.qml</file>
-        <file>qml/ChooseColorWindow.qml</file>
+        <file>qml/AppearanceSettingsWindow.qml</file>
         <file>qml/icons/color.png</file>
         <file>qml/MergeStrategyComboBox.qml</file>
         <file>qml/icons/dialog-information.png</file>
