--- a/src/tools/qt-gui/resources.qrc
+++ b/src/tools/qt-gui/resources.qrc
@@ -66,7 +66,7 @@
         <file>qml/PluginInfo.qml</file>
         <file>qml/icons/edit-delete.png</file>
         <file>qml/Indicator.qml</file>
-        <file>qml/ChooseColorWindow.qml</file>
+        <file>qml/AppearanceSettingsWindow.qml</file>
         <file>qml/icons/color.png</file>
         <file>qml/MergeStrategyComboBox.qml</file>
         <file>qml/icons/dialog-information.png</file>
