Qt GUI xdg icon theme support rework:
Introduce `HelperFunctions.js`: This qml module now contains helper
functions. `useIcon(name)` gets the correct icon name if the system icon theme
option is enabled and returns an empty string otherwise.
`useIconSource(name)`retruns a image source path for an icon name if
icon theme option is enabled, otherwise it retourns the qrc path as
`icons/name.png`

All qml items with an `iconSource` now also have a `iconName` element to
enebale xdg icon theme support. All image items that use an icon source
now use the useIconSource function to use a xdg icon if the option is
enabled.

--- a/src/tools/qt-gui/resources.qrc
+++ b/src/tools/qt-gui/resources.qrc
@@ -36,7 +36,7 @@
         <file>qml/icons/edit-paste.png</file>
         <file>qml/icons/edit-rename.png</file>
         <file>qml/icons/new-array.png</file>
-        <file>qml/icons/elektra-logo.png</file>
+        <file>qml/icons/elektra.png</file>
         <file>qml/Page1.qml</file>
         <file>qml/Page2.qml</file>
         <file>qml/Page3.qml</file>
@@ -71,5 +71,6 @@
         <file>qml/MergeStrategyComboBox.qml</file>
         <file>qml/icons/dialog-information.png</file>
         <file>qml/GUIActions.qml</file>
+        <file>qml/HelperFunctions.js</file>
     </qresource>
 </RCC>
