rest-frontend: website structure generator + consumer in frontend

--- a/src/tools/rest-frontend/resources/assets/skin/base/theme.less
+++ b/src/tools/rest-frontend/resources/assets/skin/base/theme.less
@@ -40,6 +40,17 @@ nav.navbar-second > div.container-fluid > ul > li > a {
     margin-left: -4px;
 }
 
+ul.nav li.section-title {
+	margin-bottom: 15px;
+	border-bottom: 2px solid #999;
+	padding-bottom: 5px;
+	padding-left: 15px;
+}
+
+ul.nav li.section-title:not(:first-child) {
+	margin-top: 10px;
+}
+
 span.entry.config.output {
     white-space: pre-wrap;
 }
