rest-frontend: little design change for docu pages

--- a/src/tools/rest-frontend/resources/assets/skin/base/theme.less
+++ b/src/tools/rest-frontend/resources/assets/skin/base/theme.less
@@ -51,6 +51,12 @@ ul.nav li.section-title:not(:first-child) {
 	margin-top: 10px;
 }
 
+ul.nav li a.listfiles.file-link {
+	padding: 3px 15px 5px;
+	word-wrap: break-word;
+	cursor: pointer;
+}
+
 span.entry.config.output {
     white-space: pre-wrap;
 }
