rest-frontend: individual website files have now own URL, structure file allows now for manual sections

--- a/src/tools/rest-frontend/resources/assets/skin/base/theme.less
+++ b/src/tools/rest-frontend/resources/assets/skin/base/theme.less
@@ -52,7 +52,7 @@ ul.nav li.section-title:not(:first-child) {
 }
 
 ul.nav li a.listfiles.file-link {
-	padding: 3px 15px 5px;
+	padding: 3px 15px;
 	word-wrap: break-word;
 	cursor: pointer;
 }
