rest-frontend: scroll-to-top button

--- a/src/tools/rest-frontend/resources/assets/skin/base/theme.less
+++ b/src/tools/rest-frontend/resources/assets/skin/base/theme.less
@@ -114,6 +114,13 @@ ul.pagination > li {
     margin-top: 20px;
 }
 
+.footer a.scroll-to-top {
+	margin-left: 15px;
+	font-size: 1.4em;
+	line-height: 1em;
+	cursor: pointer;
+}
+
 .btn-util.show-hover .show-hover-target {
 	display: none;
 }
