--- a/src/tools/rest-frontend/resources/assets/skin/base/theme.less
+++ b/src/tools/rest-frontend/resources/assets/skin/base/theme.less
@@ -98,6 +98,52 @@ ul.pagination > li {
 	cursor: pointer;
 }
 
+div.docu.markdown {
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+	line-height: 1.5em;
+	font-size: 1em;
+}
+
+div.docu.markdown h1 {
+	margin-top: 0px;
+	font-size: 2em;
+}
+
+div.docu.markdown h2 {
+	margin-top: 24px;
+	font-size: 1.5em;
+}
+
+div.docu.markdown h3 {
+	margin-top: 24px;
+	font-size: 1.25em;
+}
+
+div.docu.markdown h4 {
+	margin-top: 24px;
+	font-size: 1em;
+}
+
+div.docu.markdown h1, h2 {
+	border-bottom: 1px solid #eee;
+}
+
+div.docu.markdown h1, h2, h3 {
+	padding-bottom: 0.3em;
+}
+
+div.docu.markdown h1, h2, h3, h4 {
+	margin-bottom: 15px;
+	font-weight: 600;
+	line-height: 1.25;
+	word-wrap: break-word;
+}
+
+div.docu.markdown p {
+	margin-top: 0px;
+	margin-bottom: 15px;
+}
+
 .footer {
     position: absolute;
     bottom: 0;
