--- a/src/tools/rest-frontend/resources/assets/skin/base/theme.less
+++ b/src/tools/rest-frontend/resources/assets/skin/base/theme.less
@@ -57,6 +57,10 @@ ul.nav li a.listfiles.file-link {
 	cursor: pointer;
 }
 
+#main-section {
+	margin-bottom: 60px;
+}
+
 span.entry.config.output {
     white-space: pre-wrap;
 }
