--- a/src/tools/rest-frontend/resources/assets/skin/base/theme.less
+++ b/src/tools/rest-frontend/resources/assets/skin/base/theme.less
@@ -78,6 +78,10 @@ span.entry.config.utils > span.util:last-child {
 	margin-right: 0px;
 }
 
+i.form-hint {
+	cursor: pointer;
+}
+
 div.ui-notification {
     background: none;
 }
