rest-frontend: add news page and scripts that read, parse and copy news files

--- a/src/tools/rest-frontend/resources/assets/skin/base/theme.less
+++ b/src/tools/rest-frontend/resources/assets/skin/base/theme.less
@@ -152,6 +152,10 @@ div.docu.markdown p {
 	margin-bottom: 15px;
 }
 
+div.docu.markdown img {
+	max-width: 100%;
+}
+
 .footer {
     position: absolute;
     bottom: 0;
