rest-frontend: added proper main page
- elektra slogan on top
- display up to 5 of the latest news (releases)
- enumerate 6 key facts of electra
- small showcase screencast

--- a/src/tools/rest-frontend/resources/assets/skin/base/theme.less
+++ b/src/tools/rest-frontend/resources/assets/skin/base/theme.less
@@ -102,6 +102,39 @@ div.ui-notification div.alert h4.ui-notification-title {
     display: inline-block;
 }
 
+div.home {
+	margin-bottom: 20px;
+}
+
+div.home h1.slogan-master {
+	margin-bottom: 5px;
+}
+
+div.home h2.slogan-slave {
+	border: none;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	padding-bottom: 10px;
+}
+
+div.home h3 {
+	padding-bottom: 0px;
+}
+
+div.home div.media {
+	margin-top: 0px;
+}
+
+div.home div.media div.media-left i.media-icon {
+	font-size: 35px;
+	padding: 3px 0;
+}
+
+div.home span.key-fact-details {
+	display: table-cell;
+	padding-top: 10px;
+}
+
 ul.pagination > li {
 	cursor: pointer;
 }
