--- a/src/tools/rest-frontend/resources/assets/skin/base/theme.less
+++ b/src/tools/rest-frontend/resources/assets/skin/base/theme.less
@@ -133,6 +133,7 @@ div.home div.media div.media-left i.media-icon {
 div.home span.key-fact-details {
 	display: table-cell;
 	padding-top: 10px;
+	text-align: justify;
 }
 
 ul.pagination > li {
