rest-frontend: readme & translation improvements, code comments
- added some small infos to readme
- improved some loca keys
- added explanation to space.less
- added development comments to the structure.json.in

--- a/src/tools/rest-frontend/resources/assets/skin/base/util/space.less
+++ b/src/tools/rest-frontend/resources/assets/skin/base/util/space.less
@@ -2,6 +2,33 @@
 // SOURCE: http://aslanbakan.com/en/blog/less-space-responsive-css-margin-and-padding-helper-classes/
 //
 
+/**
+ * This file defines some CSS helper classes that can be used to create spaces.
+ * The tags have the format: [screen size]-[type][direction]-size
+ * On normal screens, the following will create a margin-top with 10px: md-mt-10
+ *
+ * Screen size:
+ * ------------
+ * sm ... small
+ * md ... medium
+ * lg ... large
+ * xl ... extra-large
+ * 
+ * Type:
+ * ------------
+ * m ... margin
+ * p ... padding
+ * 
+ * Direction:
+ * ------------
+ * t ... top
+ * b ... bottom
+ * r ... right
+ * l ... left
+ * 
+ * Amount in pixel.
+ */
+
 ///////////////
 // variables //
 ///////////////
