rest-frontend: add 404 page

--- a/src/tools/rest-frontend/resources/assets/skin/base/theme.less
+++ b/src/tools/rest-frontend/resources/assets/skin/base/theme.less
@@ -102,6 +102,33 @@ div.ui-notification div.alert h4.ui-notification-title {
     display: inline-block;
 }
 
+div.error {
+    margin-top: 100px;
+    margin-bottom: 50px;
+}
+
+div.error h1.error-title {
+    font-size: 7em;
+    padding-bottom: 20px;
+    line-height: 0.5em;
+}
+
+div.error h1.error-title small {
+    font-size: 40%;
+}
+
+div.error h2.error-msg {
+    font-size: 1.8em;
+    margin-top: 0px;
+    padding-bottom: 25px;
+}
+
+div.error h3.error-help {
+    font-size: 1.2em;
+    color: #999;
+    line-height: 1.5em;
+}
+
 div.home {
     margin-bottom: 20px;
 }
