--- a/src/tools/rest-frontend/resources/assets/skin/base/theme.less
+++ b/src/tools/rest-frontend/resources/assets/skin/base/theme.less
@@ -77,6 +77,10 @@ span.entry.config.utils > span.util:last-child {
     margin-right: 0px;
 }
 
+div.entry.details span.description {
+    white-space: pre-line;
+}
+
 i.form-hint {
     cursor: pointer;
 }
