--- a/src/tools/web/client/css/react-treeview.css
+++ b/src/tools/web/client/css/react-treeview.css
@@ -1,3 +1,11 @@
+/**
+ * @file
+ *
+ * @brief stylesheet for the treeview in the elektra-web client application
+ *
+ * @copyright BSD License (see doc/LICENSE.md or http://www.libelektra.org)
+ */
+
 /* the tree node's style */
 .tree-view {
   overflow-y: hidden;
